--- a/_sass/post.sass
+++ b/_sass/post.sass
@@ -17,6 +17,12 @@
     font-size: 2rem
     color: $text__color_head_post
   h2
+    display: inline-block
+    background-color: $table__color_head
+    margin-left: -2rem
+    padding-left: 2rem
+    padding-right: .3rem
+    border-radius: 3px
     font-size: 3.5rem
   h3
     font-size: 2.5rem
